SERVER-56887 setIndexCommitQuorum command does not return {ok: 1} when run against a mongos on a non-existent index build

(cherry picked from commit d0f6a9a599a81e5563c353177a1e7c2df9c21302)