src/mongo/s/commands/cluster_set_index_commit_quorum_cmd.cpp
@@ -36,9 +36,9 @@
 
 #include "mongo/db/auth/authorization_session.h"
 #include "mongo/db/commands.h"
-#include "mongo/db/commands/set_index_commit_quorum_gen.h"
 #include "mongo/logv2/log.h"
 #include "mongo/s/cluster_commands_helpers.h"
+#include "mongo/s/grid.h"
 
 namespace mongo {
 namespace {
@@ -53,9 +53,9 @@ namespace {
  *     commitQuorum: "majority" / 3 / {"replTagName": "replTagValue"},
  * }
  */
-class SetIndexCommitQuorumCommand final : public TypedCommand<SetIndexCommitQuorumCommand> {
+class SetIndexCommitQuorumCommand : public BasicCommand {
 public:
-    using Request = SetIndexCommitQuorum;
+    SetIndexCommitQuorumCommand() : BasicCommand("setIndexCommitQuorum") {}
 
     std::string help() const override {
         std::stringstream ss;
@@ -79,45 +79,58 @@ public:
         return AllowedOnSecondary::kNever;
     }
 
-    class Invocation final : public InvocationBase {
-    public:
-        using InvocationBase::InvocationBase;
+    bool supportsWriteConcern(const BSONObj& cmd) const final {
+        return true;
+    }
 
-        void typedRun(OperationContext* opCtx) {
-            BSONObj cmdObj = request().toBSON(BSONObj());
-            LOGV2_DEBUG(22757,
-                        1,
-                        "setIndexCommitQuorum",
-                        "namespace"_attr = request().getNamespace(),
-                        "command"_attr = redact(cmdObj));
+    Status checkAuthForOperation(OperationContext* opCtx,
+                                 const std::string& dbName,
+                                 const BSONObj& cmdObj) const override {
+        const NamespaceString nss(CommandHelpers::parseNsCollectionRequired(dbName, cmdObj));
+        if (!AuthorizationSession::get(opCtx->getClient())
+                 ->isAuthorizedForActionsOnResource(ResourcePattern::forExactNamespace(nss),
+                                                    ActionType::createIndex)) {
+            return Status(ErrorCodes::Unauthorized, "Unauthorized");
+        }
+        return Status::OK();
+    }
 
-            scatterGatherOnlyVersionIfUnsharded(
-                opCtx,
-                request().getNamespace(),
-                applyReadWriteConcern(
-                    opCtx, this, CommandHelpers::filterCommandRequestForPassthrough(cmdObj)),
-                ReadPreferenceSetting::get(opCtx),
-                Shard::RetryPolicy::kNotIdempotent);
+    bool run(OperationContext* opCtx,
+             const std::string& dbName,
+             const BSONObj& cmdObj,
+             BSONObjBuilder& result) override {
+        const NamespaceString nss(CommandHelpers::parseNsCollectionRequired(dbName, cmdObj));
+        LOGV2_DEBUG(22757,
+                    1,
+                    "setIndexCommitQuorum",
+                    "namespace"_attr = nss,
+                    "command"_attr = redact(cmdObj));
+
+        auto routingInfo =
+            uassertStatusOK(Grid::get(opCtx)->catalogCache()->getCollectionRoutingInfo(opCtx, nss));
+        auto shardResponses = scatterGatherVersionedTargetByRoutingTable(
+            opCtx,
+            nss.db(),
+            nss,
+            routingInfo,
+            applyReadWriteConcern(
+                opCtx, this, CommandHelpers::filterCommandRequestForPassthrough(cmdObj)),
+            ReadPreferenceSetting::get(opCtx),
+            Shard::RetryPolicy::kNotIdempotent,
+            BSONObj() /* query */,
+            BSONObj() /* collation */);
+
+        std::string errmsg;
+        const bool ok =
+            appendRawResponses(opCtx, &errmsg, &result, std::move(shardResponses)).responseOK;
+        CommandHelpers::appendSimpleCommandStatus(result, ok, errmsg);
+
+        if (ok) {
+            LOGV2(5688700, "Index commit quorums set", "namespace"_attr = nss);
         }
 
-    private:
-        NamespaceString ns() const override {
-            return request().getNamespace();
-        }
-
-        bool supportsWriteConcern() const override {
-            return true;
-        }
-
-        void doCheckAuthorization(OperationContext* opCtx) const override {
-            uassert(ErrorCodes::Unauthorized,
-                    "Unauthorized",
-                    AuthorizationSession::get(opCtx->getClient())
-                        ->isAuthorizedForActionsOnResource(
-                            ResourcePattern::forExactNamespace(request().getNamespace()),
-                            ActionType::createIndex));
-        }
-    };
+        return ok;
+    }
 
 } setCommitQuorumCmd;
 
